--- a/src/pages/mainbg.css
+++ b/src/pages/mainbg.css
@@ -1,6 +1,6 @@
 #mainbg {
     background-color: red;
-    background-image: url(../components/jts_trucks.jpg);
+    background-image: url(../components/jtstruckswithlogo.jpg);
    background-size: cover;
     background-position: center;  
 } 
