--- a/src/pages/mainbg.css
+++ b/src/pages/mainbg.css
@@ -1,7 +1,58 @@
 #mainbg {
-    background-color: red;
-    background-image: url(../components/jtstruckswithlogo.jpg);
-   background-size: cover;
-    background-position: center;  
- 
-} 
+
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    /* Adjust as needed */
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
+        url('../components/jtstruckswithlogo.jpg') center/cover no-repeat;
+
+}
+
+#mainbg::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.1);
+    /* Adjust opacity */
+    z-index: 1;
+}
+
+#menubar {}
+
+@media (max-width: 768px) {
+    #mainbg {
+        height: 50vh;
+        /* Reduce height for smaller screens */
+    }
+
+
+}
+
+
+#service {
+    animation: appear 5s linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 40%;
+}
+
+#delivery {
+    animation: appear 5s linear;
+    animation-timeline: view();
+    animation-range: entry 0% cover 30%;
+}
+
+
+@keyframes appear {
+    from {
+        opacity: 0;
+        scale: 0.4;
+    }
+
+    to {
+        opacity: 1;
+        scale: 1;
+    }
+}
